@@ -3,6 +3,8 @@ source 'https://rubygems.org'
 gem "rake"
 gem "minitest-global_expectations"
 gem "m"
+gem "rspec-core"
+gem "rspec-expectations"
 
 # Limit minitest version because m does not yet work with minitest 5.19+
 gem "minitest", "<5.19"
